# rail_dog

./: .gitignore  README.md  pyproject.toml
data/: config_fmg.yaml
data/base_data/Data In/: CURVE_SECTIONS.csv  EML.csv  MLX.csv  SML.csv  Switches.csv  TLX.csv  fmg_railway_design_centreline_20250504.geojson  switches.geojson
data/base_data/Data In/Superseeded/: Ensco Switch Locations.csv  Ensco TQI Exceptions 2024 DEC.csv  IOC 20250313.csv
rail_dog/: main.py  output.py  processor.py  rail_dog.code-workspace
rail_dog/configs/: defaults.py  params.py
rail_dog/tests/: test_processor.py
rail_dog/tests/test_data/01_fmg/: config_fmg.yaml  fmg.qgz
rail_dog/tests/test_data/01_fmg/base_data/: addresses.geojson  rail_testing.geojson  rail_testing.qmd  railway_lines_fmg.geojson  railway_lines_pilbara.geojson
rail_dog/tests/test_data/01_fmg/controls/: blocks.dbf  blocks.qix  blocks.shp  blocks.shx  cabinets.dbf  cabinets.qix  cabinets.shp  cabinets.shx
rail_dog/tests/test_data/01_fmg/process/: ug_path_segments.fgb
rail_dog/utils/: io_utils.py  rail_utils.py
