[project]
name = "rail_dog"
version = "1.0.0"
description = "A railway analysis tool"
authors = [
    {name = "Leigh Maidment", email = "leigh@pozibl.com"}
]
requires-python = ">=3.11"

dependencies = [
    "click>=8.0.0",
    "dotenv>=0.9.0",
    "geopandas>=1.0.0",
	"shapely==2.0.6",
	"python-dateutil>=2.9.0",
	"pyproj>=3.6.0",
	"pandas>=2.2.0",
	"numpy==1.26.4",
	"python-geohash>=0.8.0",
	"geonetworkx>=0.5.0",
	"utm>=0.7.0",
	"momepy==0.8.0",
	"pydantic>=2.9.0",
	"toml>=0.10.0",
	"pyyaml>=6.0.0",
	"h3<4.0.0",
	"psycopg>=3.2.6",
	"geoalchemy2>=0.17.1",
	"openpyxl==3.1.5",
]

[project.scripts]
run_rail = "rail_dog.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


